@@ -2304,3 +2304,4 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 35.Commands LOAD/UNLOAD now can be done manually by players for ranged weapons requiring ammunition.
 36.Affect now shows disposition, and time remaining on spells.
 37.Gathering skills are a 1/3 more stingy, and Crafting skills sort their lists by level now.
+38.Foreign CharSet localization support (char names, lists.ini (file loading/saving in general), web file editor, misc problems...)
